use absolute path for Dockerfile

--- a/tekton-cicd/tasks/source-to-image.yaml
+++ b/tekton-cicd/tasks/source-to-image.yaml
@@ -25,7 +25,7 @@ spec:
       command:
         - /kaniko/executor
       args:
-        - --dockerfile=${inputs.params.pathToDockerFile}
+        - --dockerfile=/workspace/git-source/${inputs.params.pathToDockerFile}
         - --destination=${inputs.params.imageUrl}:${inputs.params.imageTag}
         - --context=/workspace/git-source/${inputs.params.pathToContext}
       env:
