Switch to hangzhou container registry

--- a/tekton-cicd/image-secret.yaml
+++ b/tekton-cicd/image-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: ack-cr-push-secret
   annotations:
-    tekton.dev/docker-0: https://registry.cn-beijing.aliyuncs.com
+    tekton.dev/docker-0: https://registry.cn-hangzhou.aliyuncs.com
 type: kubernetes.io/basic-auth
 stringData:
   username: yinxintac@1323879484213653
