--- a/tekton-cicd/pipeline-account.yaml
+++ b/tekton-cicd/pipeline-account.yaml
@@ -22,8 +22,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: pipeline-role
 rules:
-- apiGroups: ["serving.knative.dev"]
-  resources: ["services"]
+- apiGroups: ["extensions"]
+  resources: ["deployments"]
   verbs: ["get", "create", "update", "patch"]
 
 ---
