--- a/knative/helloworld-go.yaml
+++ b/knative/helloworld-go.yaml
@@ -18,4 +18,4 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
-        serviceAccount: pipeline-account
+        serviceAccountName: pipeline-account
