--- a/knative/helloworld-go.yaml
+++ b/knative/helloworld-go.yaml
@@ -18,4 +18,5 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
-      serviceAccountName: pipeline-account
+      imagePullSecrets:
+      - name: pipeline-account
