--- a/knative/helloworld-go.yaml
+++ b/knative/helloworld-go.yaml
@@ -19,4 +19,4 @@ spec:
         ports:
         - containerPort: 8080
       imagePullSecrets:
-      - name: ack-cr-push-secret
+      - name: regcred
