Remove deployment.yaml from repo and use configmap

--- a/tekton-cicd/run/picalc-pipeline-run.yaml
+++ b/tekton-cicd/run/picalc-pipeline-run.yaml
@@ -13,7 +13,7 @@ spec:
     - name: pathToContext
       value: "src"
     - name: pathToYamlFile
-      value: "knative/helloworld-go.yaml"
+      value: "managed-web-app-deployment"
     - name: imageUrl
       value: "registry.cn-hangzhou.aliyuncs.com/abcpingtaitac/commemorate-front"
     - name: imageTag
