--- a/tekton-cicd/tasks/deploy-using-kubectl.yaml
+++ b/tekton-cicd/tasks/deploy-using-kubectl.yaml
@@ -4,9 +4,6 @@ metadata:
   name: deploy-using-kubectl
 spec:
   inputs:
-    resources:
-      - name: git-source
-        type: git
     params:
       - name: pathToYamlFile
         description: The path to the yaml file to deploy within the git source
@@ -16,18 +13,17 @@ spec:
         description: Tag of the images to be used.
         default: "latest"
   steps:
-    - name: update-yaml
-      image: alpine
-      command: ["sed"]
-      args:
-        - "-i"
-        - "-e"
-        - "s;__IMAGE__;$(inputs.params.imageUrl):$(inputs.params.imageTag);g"
-        - "/workspace/git-source/$(inputs.params.pathToYamlFile)"
     - name: run-kubectl
       image: registry.cn-hangzhou.aliyuncs.com/knative-sample/kubectl:v0.5.0
       command: ["kubectl"]
       args:
         - "apply"
         - "-f"
-        - "/workspace/git-source/$(inputs.params.pathToYamlFile)"
+        - "/workspace/deploy/deployment.yaml"
+      volumeMounts:
+        - name: deployment-yaml-dir
+          mountPath: /workspace/deploy/
+  volumes:
+  - name: deployment-yaml-dir
+    configMap:
+      name: $(inputs.params.pathToYamlFile)
