--- a/Dockerfile-nodejs-nginx
+++ b/Dockerfile-nodejs-nginx
@@ -26,4 +26,4 @@ FROM nginx
 # COPY nginx/conf/nginx.conf /etc/nginx/conf.d/default.conf
 # COPY nginx/nginx.conf /etc/nginx/nginx.conf
 
-COPY dist/ /usr/share/nginx/html
+COPY --from=0 /usr/src/app/dist/ /usr/share/nginx/html
