--- a/tekton-cicd/configmap/dockerfile.yaml
+++ b/tekton-cicd/configmap/dockerfile.yaml
@@ -11,4 +11,4 @@ data:
     RUN npm install
     RUN npm run build
     FROM nginx
-    COPY dist/ /usr/share/nginx/html
+    COPY --from=0 /usr/src/app/dist/ /usr/share/nginx/html
